# capn

./: CHANGELOG.md  Cargo.toml  README.md  README.md.in  build.rs  schema.styx
.claude/: settings.local.json
.config/captain/: config.styx
capn-config/: Cargo.toml  README.md  README.md.in
capn-config/src/: lib.rs
captain-config/: Cargo.toml  README.md  README.md.in
captain-config/src/: lib.rs
hooks/: pre-commit  pre-push
src/: checks.rs  config.rs  main.rs  task.rs
src/commands/: clean.rs  debug_packages.rs  init.rs  migrate.rs  mod.rs  pre_commit.rs  pre_push.rs
src/jobs/: arborium.rs  cargo_lock.rs  mod.rs  readme.rs  rustfmt.rs
src/utils/: dir_size.rs  mod.rs  progress.rs
tests/: external_path_deps.rs
tests/fixtures/external_crate/: Cargo.toml
tests/fixtures/external_crate/src/: lib.rs
tests/fixtures/valid_workspace/crate-a/: Cargo.toml
tests/fixtures/valid_workspace/crate-b/: Cargo.toml
tests/fixtures/valid_workspace/crate-b/src/: lib.rs
tests/fixtures/workspace_with_direct_path_dep_missing_version/: Cargo.toml
tests/fixtures/workspace_with_direct_path_dep_missing_version/my-crate/: Cargo.toml
tests/fixtures/workspace_with_direct_path_dep_missing_version/my-crate/src/: lib.rs
tests/fixtures/workspace_with_direct_path_dep_missing_version/my-internal/: Cargo.toml
tests/fixtures/workspace_with_direct_path_dep_missing_version/my-internal/src/: lib.rs
tests/fixtures/workspace_with_external_dep/: Cargo.toml
tests/fixtures/workspace_with_external_dep/my-crate/: Cargo.toml
tests/fixtures/workspace_with_external_dep/my-crate/src/: lib.rs
tests/fixtures/workspace_with_external_dev_dep_workspace/: Cargo.toml
tests/fixtures/workspace_with_external_dev_dep_workspace/my-crate/: Cargo.toml
tests/fixtures/workspace_with_external_patch/: Cargo.toml
tests/fixtures/workspace_with_internal_dev_dep_path_only/: Cargo.toml
tests/fixtures/workspace_with_internal_dev_dep_path_only/my-crate/: Cargo.toml
tests/fixtures/workspace_with_internal_dev_dep_path_version/my-crate/: Cargo.toml
tests/fixtures/workspace_with_internal_dev_dep_workspace/my-crate/: Cargo.toml
tests/fixtures/workspace_with_internal_target_dev_dep_workspace/my-crate/: Cargo.toml
tests/fixtures/workspace_with_private_path_dep_missing_version/: Cargo.toml
tests/fixtures/workspace_with_private_path_dep_missing_version/my-crate/: Cargo.toml
tests/fixtures/workspace_with_private_path_dep_missing_version/my-internal/: Cargo.toml
tests/fixtures/workspace_with_publishable_path_dep_missing_version/my-crate/: Cargo.toml
tests/fixtures/workspace_with_publishable_path_dep_missing_version/my-crate/src/: lib.rs
xtask/: Cargo.toml  arborium-header.html
xtask/src/: main.rs
