[workspace]
members = ["captain-config", "xtask"]

[package]
name = "captain"
version = "1.4.0"
edition = "2024"
description = "Development automation tool for Rust workspaces"
keywords = ["code-generation", "templates"]
categories = ["development-tools"]
rust-version = "1.89"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bearcove/captain"

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]


[dependencies]
captain-config = { path = "captain-config" }
cargo_metadata = "0.23.1"
dirs = "6"
facet = { git = "https://github.com/facet-rs/facet", branch = "main" }
facet-styx = { git = "https://github.com/bearcove/styx", branch = "main", features = ["figue"] }
figue = { git = "https://github.com/bearcove/figue", branch = "main" }
styx-embed = { git = "https://github.com/bearcove/styx", branch = "main" }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
owo-colors = "4.2.3"
toml_edit = "0.24"
supports-color = "3.0.2"
strip-ansi-escapes = "0.2.1"
walkdir = "2"
indicatif = "0.18"

[build-dependencies]
captain-config = { path = "captain-config" }
facet-styx = { git = "https://github.com/bearcove/styx", branch = "main" }

[dev-dependencies]

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
