[workspace]
members = ["capn-config", "xtask"]

[package]
name = "capn"
version = "1.4.0"
edition = "2024"
default-run = "capn"
description = "Development automation tool for Rust workspaces"
keywords = ["code-generation", "templates"]
categories = ["development-tools"]
rust-version = "1.89"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bearcove/capn"

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]


[dependencies]
capn-config = { version = "1.4.0", path = "capn-config" }
cargo_metadata = "0.23.1"
dirs = "6"

# facet
facet = { version = "0.44" }

# styx
facet-styx = { version = "2.0.0", features = ["figue"] }
styx-embed = { version = "2.0.0" }

# figue
figue = { version = "2.0.0" }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
owo-colors = "4.2.3"
toml_edit = "0.24"
supports-color = "3.0.2"
strip-ansi-escapes = "0.2.1"
walkdir = "2"
indicatif = "0.18"

[build-dependencies]
capn-config = { version = "1.4.0", path = "capn-config" }
facet-styx = { version = "2.0.0" }

[dev-dependencies]

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
