[package]
name = "capn-config"
version = "1.4.0"
edition = "2024"
description = "Configuration types for capn"
license = "MIT OR Apache-2.0"

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
facet = { version = "0.44.1" }
facet-default = { version = "0.44.1" }

[package.metadata.cargo-shear]
ignored = ["facet-default"]
